--- a/src/components/CarouselButton.css
+++ b/src/components/CarouselButton.css
@@ -1,14 +1,11 @@
 .latest-news-button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    gap: 15px !important;
 }
 @media only screen and (max-width : 600px){
     .latest-news-button{
-        display: flex;
-        align-items: center;
-        justify-content: center;
         gap: 10px;
         margin-top: 60px;
         width: 30px;
