--- a/src/components/LatestNews.css
+++ b/src/components/LatestNews.css
@@ -7,25 +7,6 @@
     justify-content: space-between;
     align-items: center;
 }
-.prev-btn{
-    color: #e7151a;
-    background-color: #eeeeee;
-    font-size: 30px;
-    /* padding: 10px 20px; */
-    padding-top: 10px;
-    padding-left: 25px;
-    padding-bottom: 10px;
-    border: 1px solid #d2d2d2;
-}
-.next-btn{
-    color: #e7151a;
-    background-color: #eeeeee;
-    font-size: 30px;
-    padding-top: 10px;
-    padding-right: 25px;
-    padding-bottom: 10px;
-    border: 1px solid #d2d2d2;
-}
 .latest-news-head h2{
     font-size: 36.13px;
     font-weight: 700;
@@ -52,7 +33,7 @@
 }
 @media only screen and (max-width : 1024px){
     .latest-news-container{
-        padding: 100px 100px;
+        padding: 100px 50px;
     }
     .latest-news-cards{
         margin-top: 55px;
@@ -61,9 +42,14 @@
         flex-wrap: wrap;
     }
 }
-@media only screen and (max-width : 768px){
+@media only screen and (max-width : 820px){
     .latest-news-container{
         padding: 20px 30px;
+    }
+}
+@media only screen and (max-width : 768px){
+    .latest-news-container{
+        padding: 20px 50px;
     }
 }
 @media only screen and (max-width : 640px){
