--- a/src/components/LatestNewsCard.css
+++ b/src/components/LatestNewsCard.css
@@ -1,44 +1,48 @@
-
-.latest-card-container{
-    position: relative;
-    width: 278px;
-    height: 397px;
+.latest-card-container {
+  position: relative;
+  width: 278px;
+  height: 397px;
 }
-.card-tag{
-    position: absolute;
-    top: 18px;
-    left: 18px;
-    border-radius: 5px;
-    padding: 5px 20px;
-    color: #fff;
-    font-size: 10.06px;
-    font-weight: 500;
+.card-tag {
+  position: absolute;
+  top: 18px;
+  left: 18px;
+  border-radius: 5px;
+  padding: 5px 20px;
+  color: #fff;
+  font-size: 10.06px;
+  font-weight: 500;
 }
-.card-content{
-    position: absolute;
-    bottom: 10px;
-    color: #fff;
-    padding: 30px;
+.card-content {
+  position: absolute;
+  bottom: 10px;
+  color: #fff;
+  padding: 30px;
 }
-.head-text{
-    font-size: 12.41px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-align: left;
+.head-text {
+  font-size: 12.41px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-align: left;
 }
-.sub-head{
-    font-size: 16px;
-    font-weight: 500;
-    text-align: left;
+.sub-head {
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
 }
-.latest-card-img img{
-    width: 100%;
-    height: 100%;
+.latest-card-img img {
+  width: 100%;
+  height: 100%;
 }
-/* @media only screen and (max-width:640px) {
-    .latest-card-container{
-        position: relative;
-        width: 300px;
-        height: 397px;
-    }
-} */
+@media only screen and (max-width: 820px) {
+  .latest-card-container {
+    width: 340px;
+    height: 485px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .latest-card-container {
+    width: 333px;
+    height: 472px;
+  }
+}
