--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,7 +36,6 @@
 }
 .search-field{
     width: 285px;
-    height: 35px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -94,61 +93,96 @@
 @media only screen and (max-width: 1024px){
     .nav-container{
         padding: 15px 50px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .nav-container{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: white;
-        border-bottom: 5px solid #243584;
-        padding-top: 30px;
-        padding-right: 50px;
-        padding-bottom: 30px;
-        padding-left: 50px;
-        position: relative;
-        height: 100px;
+        gap: 3px;
     }
     .nav-items{
-        display: flex;
-        gap: 10px;
-    }
-    .nav-items a {
-        font-size: 12px;
-        line-height: 15px;
-        letter-spacing: 15;
-        font-weight: 500;
-        text-decoration: none;
-        color: #000;
-        cursor: pointer;
-    }
-    .signup-section{
-        display: flex;
-        gap: 10px;
+        gap: 12px;
     }
     .search-field{
-        width: 200px;
+        width: 250px;
         height: 35px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border: 1px solid #d9d9d9;
-        height: 35px;
-        padding: 5px 14px;
+        gap: 5px;
     }
-    .signin-button{
-        background-color: #e02727;
-        color: white;
-        font-size: 11px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 3px;
-        padding:  5px 8px;
-        width: 120px;
+    .nav-items-content {
+        font-size: 12px;
+        line-height: 5px;
+        font-weight: 400;
+    }
+    .signin-button {
+        font-size: 12px;
+        gap: 5px;
+        padding: 0px 6px;
+        width: 130px;
         height: 35px;
+    }
+    .search-field input {
+        font-size: 12px;
+    }
+}
+@media only screen and (max-width: 820px){
+    .nav-container{
+        padding: 15px 30px;
+        gap: 3px;
+    }
+.logo {
+    width: 130px;
+    height: 50px;
+}
+    .nav-items{
+        gap: 15px;
+    }
+    .search-field{
+        width: 188px;
+        height: 35px;
+        gap: 5px;
+    }
+    .nav-items-content {
+        font-size: 10px;
+        line-height: 5px;
+        font-weight: 400;
+    }
+    .signin-button {
+        font-size: 10px;
+        gap: 5px;
+        padding: 0px 6px;
+        width: 103px;
+        height: 35px;
+    }
+    .search-field input {
+        font-size: 10px;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .nav-container{
+        padding: 15px 30px;
+        gap: 3px;
+    }
+    .logo{
+        width: 126px;
+        height: 46px;
+    }
+    .nav-items{
+        gap: 8.5px;
+    }
+    .search-field{
+        width: 188px;
+        height: 35px;
+        gap: 5px;
+    }
+    .nav-items-content {
+        font-size: 10px;
+        line-height: 5px;
+        font-weight: 400;
+    }
+    .signin-button {
+        font-size: 10px;
+        gap: 5px;
+        padding: 0px 6px;
+        width: 103px;
+        height: 35px;
+    }
+    .search-field input {
+        font-size: 10px;
     }
   }
   @media only screen and (max-width: 600px){
