--- a/src/components/OurPartners.css
+++ b/src/components/OurPartners.css
@@ -66,7 +66,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0px 100px ;
+        padding: 0px 50px ;
     }
 }
 @media only screen and (max-width : 600px){
@@ -80,7 +80,7 @@
     .partners-head{
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         padding: 10px 20px ;
     }
     .partners-head h2{
@@ -90,13 +90,21 @@
         color: #243584;
     }
     .partners-head a{
-        background-color: #000;
-        color: white;
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 10px;
         border-radius: 30px;
         font-size: 8px;
+    }
+    .partners-button {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 94px;
+        margin-top: 10px;
+    }
+    .brand-logo-cards{
+        margin-top: 20px;
     }
 }
