--- a/src/components/ProductRange.css
+++ b/src/components/ProductRange.css
@@ -51,29 +51,13 @@
   justify-content: center;
   gap: 15px;
 }
-.prev{
-  color: #e7151a;
-  background-color: #eeeeee;
-  font-size: 30px;
-  /* padding: 10px 20px; */
-  padding-top: 10px;
-  padding-left: 25px;
-  padding-bottom: 10px;
-  border: 1px solid #d2d2d2;
-}
-.next{
-  color: #e7151a;
-  background-color: #eeeeee;
-  font-size: 30px;
-  padding-top: 10px;
-  padding-right: 25px;
-  padding-bottom: 10px;
-  border: 1px solid #d2d2d2;
-}
 @media only screen and (max-width: 1024px) {
+  .product-range-container{
+    margin-top: 50px;
+  }
   .product-range {
     background-color: #e7151a;
-    padding-left: 100px;
+    padding-left: 50px;
     padding-top: 54px;
     width: 722px;
     height: 301px;
@@ -84,36 +68,35 @@
     height: 250px;
     position: absolute;
     top: 170px;
-    left: 100px;
+    left: 50px;
     display: flex;
   }
   .carousel-button {
     position: absolute;
-    right: 100px;
+    right: 50px;
     top: 50px;
   }
   .view-all-products {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    padding-right: 100px;
+    padding-right: 50px;
     margin: 44px 0;
   }
 }
 @media only screen and (max-width: 820px) {
   .product-range {
-    background-color: #e7151a;
     padding-left: 30px;
-    padding-top: 54px;
-    width: 722px;
-    height: 301px;
+    padding-top: 30px;
+    width: 546px;
+    height: 275px;
     margin-bottom: 100px;
   }
   .carousel {
     width: 100%;
     height: 250px;
     position: absolute;
-    top: 170px;
+    top: 150px;
     left: 30px;
     display: flex;
   }
@@ -132,7 +115,6 @@
 }
 @media only screen and (max-width: 768px) {
   .product-range {
-    background-color: #e7151a;
     padding-left: 50px;
     padding-top: 37px;
     width: 522px;
@@ -162,19 +144,19 @@
   }
 }
 @media only screen and (max-width: 600px) {
+  .product-range-container{
+    margin-top: 20px;
+  }
   .product-range {
-    background-color: #e7151a;
     padding: 20px;
     width: 375px;
     height: 266px;
     margin-bottom: 100px;
   }
   .carousel {
-    width: 70%;
-    height: 250px;
-    position: absolute;
-    display: flex;
-    overflow: hidden;
+    width: 95%;
+    height: 200px;
+    left: 20px;
   }
   .carousel-button {
     position: absolute;
@@ -184,7 +166,7 @@
     align-items: center;
     justify-content: flex-start;
     padding: 0px 20px;
-    margin: 44px 0;
+    margin: 20px 0;
   }
   .product-range-button {
     display: flex;
