--- a/src/components/TopNavbar.css
+++ b/src/components/TopNavbar.css
@@ -52,7 +52,11 @@
         padding: 15px 50px;
     }
 }
-
+@media only screen and (max-width: 820px){
+    .top-nav-container{
+        padding: 15px 30px;
+    }
+}
 @media only screen and (max-width: 768px){
     .top-nav-container{
         background-color: #243584;
