--- a/src/components/LatestNews.css
+++ b/src/components/LatestNews.css
@@ -57,4 +57,13 @@
         padding: 20px 20px;
         width: 375px;
     }
+    .latest-news-cards{
+        margin-top: 20px;
+    }
+    .latest-news-head h2{
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 45px;
+        color: #243584 ;
+    }
 }
