--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,6 +10,9 @@
     height: 110px;
     width: 100%;
 }
+.mob-nav-container{
+    display: none;
+}
 .logo{
     width: 136px;
     height: 56px;
@@ -91,6 +94,9 @@
 }
 
 @media only screen and (max-width: 1024px){
+    .mob-nav-container{
+        display: none;
+    }
     .nav-container{
         padding: 15px 50px;
         gap: 3px;
@@ -153,6 +159,9 @@
     }
 }
 @media only screen and (max-width: 768px) {
+    .mob-nav-container{
+        display: none;
+    }
     .nav-container{
         padding: 15px 30px;
         gap: 3px;
@@ -186,7 +195,10 @@
     }
   }
   @media only screen and (max-width: 600px){
-    .nav-container{
+    .nav-container{display: none;
+    }
+    .mob-nav-container{
+        z-index: 11;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -197,36 +209,52 @@
         padding-right: 20px;
         padding-bottom: 10px;
         padding-left: 28px;
+        position: absolute;
+        width: 100%;
+    }
+    .mob-nav-head{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+    .menu-icon{
+        width: 35px;
+    }
+    .mob-nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
         position: relative;
         height: 100%;
     }
-    .nav-items{
+    .mob-nav-items{
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
-    .signup-section{
+    .mob-signup-section{
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
-    .search-field{
+    .mob-search-field{
         width: 200px;
         height: 35px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         border: 1px solid #d9d9d9;
-        /* padding: 8px 10px; */
         height: 35px;
         padding: 5px 14px;
     }
-    .logo{
+    .mob-logo{
         width: 120px;
         height: 40px;
         margin-left: -11px;
     }
-    .signin-button{
+    .mob-signin-button{
         background-color: #e02727;
         color: white;
         font-size: 13px;
@@ -237,5 +265,17 @@
         padding:  5px 18px;
         width: 100%;
         height: 35px;
+    }
+    .mob-nav-items-content {
+        font-size: 14px;
+        line-height: 21px;
+        letter-spacing: 25;
+        font-weight: 500;
+        text-decoration: none;
+        color: #000;
+        cursor: pointer;
+    }
+    .mob-nav-items-content:hover, .set-active{
+        color: #e02727
     }
   }
