--- a/src/components/OurHistory.css
+++ b/src/components/OurHistory.css
@@ -67,3 +67,32 @@
     padding-left: 30px;
     height: 100%;
 }
+@media only screen and (max-width:1024px) {
+    .our-history-container{
+        margin-top: 50px;
+    }
+    .our-history{
+        margin-top: 40px;
+        width: 827px;
+        height: 140px;
+        border-bottom: 2px solid #111;
+        gap: 135px;
+    }
+}
+@media only screen and (max-width:600px) {
+    .our-history-container{
+        margin-top: 30px;
+        padding: 10px;
+    }
+    .our-history{
+        margin-top: 40px;
+        width: 100%;
+        height: 160px;
+        gap: 30px;
+    }
+    .our-history-bottom{
+        display: flex;
+        gap: 30px;
+        margin-left: 30px;
+    }
+}
