--- a/src/components/ProductDetailsHeader.css
+++ b/src/components/ProductDetailsHeader.css
@@ -17,4 +17,66 @@
     color: var(--black);
     font-size: 16px;
     line-height: 24px;
+    margin-top: 30px;
+    width: 585px;
+}
+.product-type-section{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 3px;
+    margin-top: 30px;
+}
+.pricing-section{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 30px;
+    gap: 38px;
+}
+.pricing-section h6{
+    color: var(--lightNavy);
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+}
+.radio-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    gap: 15px;
+}
+.radio-section p{
+    margin-top: 0px;
+    color: var(--black);
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+}
+.date-section{
+    margin-top: 30px;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+.date-section h6{
+    color: var(--lightNavy);
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+}
+.set-date{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 30px;
+}
+.date{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 200px;
+    margin-top: 25px;
 }
