--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@
 :root{
   --lightNavy:#243584;
   --black:#000;
+  --white: #fff;
   --porcelain:#f2f2f2;
   --mercury:#e8e8e8;
+  --lavaRed:#e82025;
 }
 
 *{
