--- a/src/components/ProductDetailsCarousel.css
+++ b/src/components/ProductDetailsCarousel.css
@@ -1,9 +1,8 @@
 .product-details-carousel{
-    width: 587px ;
-    height: 534px ;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 50px;
 }
 .product-details-img{
     width: 506px !important;
@@ -11,4 +10,13 @@
     height: 321px !important;
     margin-top: 0px !important;
     padding: 0px !important;
+}
+@media only screen and (max-width:820px) {
+    .product-details-img{
+        width: 600px !important;
+        background-color: transparent;
+        height: 380px !important;
+        margin-top: 0px !important;
+        padding: 0px !important;
+    }
 }
