--- a/src/components/RelatedProductsCarousel.css
+++ b/src/components/RelatedProductsCarousel.css
@@ -1,9 +1,17 @@
 .related-product-slide{
-    background-color: #ffff !important;
+    background-color: var(--white);
     border-radius: 10px;
-    width: 300px !important;
-    height: 296px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19) !important;
-    padding-bottom: 296px !important;
-    /* width: 100% !important; */
+    width: 333px;
+    height: 340px;
+    box-shadow: 0px 3px 36px 0px rgba(0, 0, 0, 0.08);
+    position: relative;
+}
+.related-product-slide, .active-border {
+    width: 348px;
+    height: 350px;
+    border: 2px solid var(--lavaRed);
+    transform: translateY(5px);
+    transition: .1s ease;
+    border-radius: 10px;
+    
 }
