--- a/src/components/RelatedSectionCarousel.css
+++ b/src/components/RelatedSectionCarousel.css
@@ -1,27 +1,18 @@
+
 .related-slide{
-    background-color: #ffff !important;
+    background-color: var(--white);
     border-radius: 10px;
-    width: 340px !important;
-    height: 296px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19) !important;
-    padding-bottom: 296px !important;
-    /* width: 100% !important; */
+    width: 333px;
+    height: 340px;
+    box-shadow: 0px 3px 36px 0px rgba(0, 0, 0, 0.08);
+    position: relative;
 }
-.slide-items{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-.product-img{
-    margin-top: 8px;
-    width: 200px;
-    background-color: #f4f4f4;
-    padding: 10px;
+.related-slide:hover, .active-border {
+    width: 348px;
+    height: 350px;
+    border: 2px solid var(--lavaRed);
+    transform: translateY(5px);
+    transition: .1s ease;
     border-radius: 10px;
-}
-.next-button{
-    position: absolute;
-    top: 16px;
-    right: 18px;
+    
 }
