--- a/src/components/DescriptionSection.css
+++ b/src/components/DescriptionSection.css
@@ -1,9 +1,13 @@
+.desc-container{
+  width: 100%;
+}
 .nav-item{
     margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 50px;
+    width: 100%;
   }
   .nav-item-list{
     color: var(--lightNavy);
@@ -18,7 +22,7 @@
     padding-bottom: 10px;
   }
   .desc-details-section{
-    width: 1125px;
+    width: 100%;
   }
   .content-one{
     margin-top: 60px;
@@ -40,7 +44,7 @@
     align-items: flex-start;
     justify-content: space-between;
     gap: 75;
-    width: 650px;
+    width: 50%;
   }
   .select-content{
     display: flex;
@@ -64,3 +68,70 @@
     background-color: var(--lavaRed);
   }
   
+  @media (max-width: 1024px){
+    .desc-container{
+      padding: 20px;
+    }
+    .content-two{
+      margin-top: 20px;
+    }
+    .select-section{
+      margin-top: 30px;
+      width: 60%;
+    }
+    .select-content p{
+      line-height: 30px;
+    }
+  }
+  @media (max-width: 820px){
+    .desc-container{
+      padding: 20px;
+    }
+    .nav-item{
+      margin-top: 20px;
+    }
+    .content-one{
+      margin-top: 20px;
+    }
+    .content-two{
+      margin-top: 15px;
+    }
+    .select-section{
+      margin-top: 20px;
+      width: 75%;
+    }
+    .select-content p{
+      line-height: 30px;
+    }
+  }
+  @media (max-width: 768px){
+    .desc-container{
+      padding: 15px;
+    }
+    .nav-item{
+      margin-top: 10px;
+      gap: 20px;
+    }
+    .nav-item-list{
+      color: var(--lightNavy);
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 25;
+      font-weight: 500;
+    }
+    .content-one{
+      margin-top: 15px;
+      line-height: 23px;
+      font-size: 14px;
+    }
+    .content-two{
+      margin-top: 10px;
+      line-height: 23px;
+      font-size: 14px;
+    }
+    .select-section{
+      margin-top: 15px;
+      width: 100%;
+      flex-wrap: wrap;
+    }
+  }
