--- a/src/components/ProductDetailsCarousel.css
+++ b/src/components/ProductDetailsCarousel.css
@@ -11,12 +11,21 @@
     margin-top: 0px !important;
     padding: 0px !important;
 }
-@media only screen and (max-width:820px) {
+@media (max-width:820px) {
+    .product-details-carousel{
+        width: 80%;
+    }
     .product-details-img{
-        width: 600px !important;
-        background-color: transparent;
-        height: 380px !important;
-        margin-top: 0px !important;
-        padding: 0px !important;
+        width: 100% !important;
+        height: 70% !important;
+    }
+}
+@media (max-width:600px) {
+    .product-details-carousel{
+        width: 100%;
+    }
+    .product-details-img{
+        width: 100% !important;
+        height: 60% !important;
     }
 }
