--- a/src/components/ProductDetailsHeader.css
+++ b/src/components/ProductDetailsHeader.css
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   width: 100%;
 }
-.product-carousel-container{
+.product-carousel-container {
   width: 45%;
 }
 .product-details-header-carousel {
@@ -68,9 +68,7 @@
 }
 .date-section {
   margin-top: 30px;
-  /* display: flex;
-    align-items: center;
-    justify-content: center; */
+  width: 100%;
 }
 .date-section h6 {
   color: var(--lightNavy);
@@ -83,26 +81,32 @@
   align-items: center;
   justify-content: flex-start;
   gap: 66px;
+  width: 100%;
 }
 .date {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 200px;
+  width: 40%;
   margin-top: 25px;
   position: relative;
 }
-.date input {
-  outline: none;
-  padding: 5px;
+.date-picker {
+  position: relative;
   border: 1px solid var(--mercury);
-  width: 245px;
+  width: 100%;
   height: 45px;
-  -webkit-appearance: none;
-  -moz-appearance:    none;
-  appearance:         none;
 }
-.date span {
+.date-picker-input {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  right: -11px;
+  bottom: 9px;
+  z-index: 11;
+}
+.clander-icon {
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,18 +114,22 @@
   padding: 5px;
   width: 18px;
   height: 18px;
-  position: absolute;
-  top: 42px;
-  right: -53px;
-  cursor: pointer;
+  right: -10px;
+  bottom: 13px;
 }
+.selected-date {
+  width: 100%;
+  margin-top: 10px;
+  text-align: center;
+}
+
 .quantity-section {
   margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   gap: 30px;
-  width: 250px;
+  width: 46%;
   position: relative;
 }
 .quantity-section h6 {
@@ -167,19 +175,19 @@
 .button-section {
   margin-top: 30px;
   display: flex;
-  gap: 40px;
+  gap: 30px;
+  width: 100%;
 }
 .add-to-cart {
   color: var(--white);
   font-size: 13px;
-  line-height: 16.73px;
   font-weight: 600;
   letter-spacing: 1px;
   background-color: var(--lavaRed);
   text-align: center;
-  padding: 17px;
+  padding: 16px;
   position: relative;
-  width: 200px;
+  width: 35%;
   height: 50px;
 }
 .add-to-cart:hover {
@@ -199,9 +207,9 @@
   letter-spacing: 1px;
   background-color: var(--lightNavy);
   text-align: center;
-  padding: 17px 40px;
+  padding: 16px 20px;
   position: relative;
-  width: 365px;
+  width: 65%;
   height: 50px;
 }
 .download-catalogue:hover {
@@ -238,7 +246,10 @@
   height: 49px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
+  .product-carousel-container {
+    width: 51%;
+  }
   .product-details-header-container {
     margin-top: 20px;
     padding: 10px;
@@ -258,10 +269,7 @@
     width: 100%;
   }
   .date {
-    width: 160px;
-  }
-  .date input {
-    width: 201px;
+    width: 40%;
   }
   .product-type-section {
     margin-top: 10px;
@@ -270,43 +278,54 @@
     margin-top: 15px;
   }
   .button-section {
-    margin-top: 20px;
-    gap: 30px;
-    width: 425px;
+    width: 100%;
+    grid-area: 25px;
+  }
+  .add-to-cart {
+    color: var(--white);
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0px;
+    padding: 16px;
+    width: 30%;
+    height: 50px;
+  }
+  .add-to-cart img {
+    width: 30px;
   }
   .download-catalogue {
-    padding: 10px 20px;
+    color: var(--white);
+    font-size: 12px;
+    line-height: 16.73px;
+    font-weight: 600;
+    letter-spacing: 0px;
+    padding: 16px;
+    width: 60%;
+    height: 50px;
+  }
+  .download-catalogue img {
+    width: 30px;
   }
   .increment {
     right: -10px;
   }
 }
-@media only screen and (max-width: 820px) {
-  .product-details-header-container {
-    margin-top: 30px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .product-details-header-carousel {
+@media (max-width: 820px) {
+  .product-carousel-container {
     width: 100%;
-    margin-right: 30px;
   }
   .product-header-details {
     width: 100%;
     margin-top: 50px;
   }
+  .product-details-header-carousel {
+    width: 100%;
+  }
   .product-header-details p {
-    width: 700px;
+    width: 100%;
   }
   .date {
-    width: 200px;
-  }
-  .date input {
-    width: 245px;
+    width: 40%;
   }
   .product-type-section {
     margin-top: 20px;
@@ -317,67 +336,102 @@
   .button-section {
     margin-top: 20px;
     gap: 50px;
-    width: 700px;
-  }
-  .download-catalogue {
-    padding: 10px 20px;
+    width: 90%;
   }
   .increment {
     right: -10px;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
+  .product-carousel-container {
+    margin-top: 30px;
+    width: 100%;
+  }
   .product-details-header-container {
     margin-top: 30px;
-    padding: 10px;
+    padding: 20px;
+    /* width: 50%; */
+  }
+  .product-detail-navigation {
+    gap: 8px;
   }
   .product-details-header-carousel {
-    width: 370px;
+    width: 100%;
     height: 334px;
     margin-right: 30px;
   }
   .product-header-details {
-    width: 477px;
+    width: 100%;
     margin-top: 50px;
   }
   .product-header-details p {
-    width: 334px;
+    width: 100%;
+  }
+  .product-detail-nav {
+    margin-top: 30px;
+    border: 1px solid var(--mercury);
+    width: 25%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+  }
+  .product-detail-nav img{
+    width: 100%;
   }
   .set-date {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
-    width: 300px;
+    width: 100%;
     gap: 5px;
   }
   .date {
-    width: 200px;
+    width: 90%;
     margin-top: 5px;
-  }
-  .date input {
-    width: 245px;
   }
   .product-type-section {
     margin-top: 20px;
   }
   .pricing-section {
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 30px;
-    gap: 0px;
+    width: 100%;
+    gap: 0;
+  }
+  .quantity-section {
+    gap: 30px;
+    width: 70%;
   }
   .button-section {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
-    width: 300px;
+    gap: 30px;
+    width: 100%;
+  }
+  .add-to-cart {
+    color: var(--white);
+    font-size: 10px;
+    font-weight: 500;
+    letter-spacing: 0px;
+    width: 30%;
+    height: 50px;
+  }
+  .add-to-cart img {
+    display: none;
   }
   .download-catalogue {
-    padding: 10px 20px;
+    color: var(--white);
+    font-size: 10px;
+    line-height: 10px;
+    font-weight: 600;
+    letter-spacing: 0px;
+    width: 60%;
+    height: 50px;
+  }
+  .download-catalogue img {
+    display: none;
   }
   .increment {
     right: -10px;
