--- a/src/components/RelatedSection.css
+++ b/src/components/RelatedSection.css
@@ -23,10 +23,84 @@
   height: 400px;
   width: 100%;
 }
-@media only screen and (max-width: 600px) {
+.related-prev{
+  transform: scale(0.9);
+}
+.related-prev:hover{
+  transform: scale(1);
+}
+.related-next{
+  transform: scale(0.9);
+}
+.related-next:hover{
+  transform: scale(1);
+}
+@media (max-width: 1024px) {
+  .related-section-container {
+    margin-top: 10px;
+    padding: 20px;
+  }
+  .related-carousel-section{
+    margin-top: 30px;
+    height: 400px;
+    width: 100%;
+  }
+}
+@media (max-width: 820px) {
+  .related-section-container {
+    margin-top: 0px;
+    padding: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .related-section-container {
+    margin-top: 0px;
+    padding: 20px;
+  }
+}
+@media (max-width: 600px) {
+  .related-section-container {
+    margin-top: 0px;
+    padding: 20px;
+  }
+  .related-section-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .related-section-head h2{
+    color: var(--lightNavy);
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 400;
+    width: 100%;
+  }
   .related-button {
     gap: 10px;
-    margin-top: 60px;
-    width: 30px;
+    width: 50%;
   }
+  .related-prev{
+    width: 35%;
+  }
+  .related-next{
+    width: 35%;
+  }
+  .related-carousel-section{
+    margin-top: 20px;
+    height: 400px;
+    width: 100%;
+  }
+  /* .related-prev{
+    transform: scale(0.9);
+  }
+  .related-prev:hover{
+    transform: scale(1);
+  }
+  .related-next{
+    transform: scale(0.9);
+  }
+  .related-next:hover{
+    transform: scale(1);
+  } */
 }
